--- a/notebook/video_demo.ipynb
+++ b/notebook/video_demo.ipynb
@@ -144,7 +144,7 @@
     "    # capturing the frame\n",
     "    ret, frame = cap.read()\n",
     "\n",
-    "    predicted_class = model(frame)\n",
+    "    # predicted_class = model(frame)    # <<implement this from model\n",
     "\n",
     "    cv2.putText(frame, predicted_class, (480//2, 640//2), font, 1, (255, 0, 0), 2)\n",
     "    # cv2.imwrite(f\"sample/{sample_class}/sample_{img_idx}.jpg\", frame)\n",
