update in gitignore file

--- a/notebook/video_demo.ipynb
+++ b/notebook/video_demo.ipynb
@@ -134,6 +134,8 @@
    "outputs": [],
    "source": [
     "# For capturing multiple images or sample collection\n",
+    "# implement model from family or friends\n",
+    "\n",
     "cam_idx = 0         # 0- laptop camera, 1- external camera\n",
     "cap = cv2.VideoCapture(cam_idx) \n",
     "\n",
